# program_in_univ

./: .gitignore  README.md
AI/BiGAN/: main.ipynb
AI/DCGAN/: main.ipynb  main.py
AI/DenseNet/: main.ipynb
AI/VAE/: main.py
AI/VanillaGAN/: discriminator.pth  generator.pth  main.py  main_gpt.py
AI4Bio/HW01/: HW01.ipynb  Homework1(1).docx
AI4Bio/HW02/: HW02.ipynb
AI4Bio/HW3+4/: homework.ipynb
AI4Bio/HW5/: hw05.ipynb
CV/HW01/: gaussian_pyramid.py  sol.typ
CV/HW02/: homework2.py  report.typ  utils.py
CV/HW03/: main.py  main1.py  report.typ
CV/HW04/: main.py  pointcloud_example.ply  report.typ  task2_tsukuba_15_0_15_SSD_interpolation.ply  task2_tsukuba_15_0_64_SSD.ply  task2_tsukuba_15_0_64_SSD_interpolation.ply  task2_tsukuba_cv2.ply  task2_tsukuba_dp.ply
CV/HW05/: main.py  report.typ
CV/HW06/: main.py  models.py  report.typ
CoRE/final_project/: Logistic Regression.ipynb  PCA_VAE.md  RSA.ipynb  SimCLR.ipynb  SimCLR_fixed_spaGCN.ipynb  VAE.ipynb  explore.ipynb  (+3 more)
NLP/: assignment1.json
R_learning/: .RData  .Rhistory  1.R  2.R  3.R  R_learning.Rproj  data.csv  周四2组开放实验1-1128.xlsx
cuda_learn/: a+b.cu  histogram.cpp  histogram.cu  vector_add.cu
hpc/hpcgame_pku_2/C/: CMakeLists.txt  filter.F90
introToAI/: hw1.tex
programmingDesign/: APlusBProblemInArgument.cpp
rust/: FAndC  FAndC.rs
self_training/: LuoguP1032.cpp  LuoguP1120.cpp  LuoguP1123.cpp  LuoguP11667.cpp  LuoguP11668.cpp  LuoguP1226.cpp  LuoguP1784.cpp  LuoguP1908.cpp  LuoguP1966.cpp  LuoguP2383.cpp  LuoguP2404.cpp  LuoguP2895.cpp  OpenJudge1789.cpp  OpenJudge1804.cpp  cf1992c.cpp
(+573 files in other folders)
